[package]
name = "tooters"
version = "0.0.4"
edition = "2021"
license-file = "LICENSE.txt"
description = "A Rust TUI-based Mastodon App"
homepage = "https://toote.rs"
repository = "https://github.com/joshka/tooters"
readme = "README.md"
keywords = ["mastodon", "tui", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = ["tokio"] }
crossterm = { version = "0.26", features = ["event-stream"] }
femme = "2.2"
futures = "0.3"
html2text = "0.5"
tui-input = "0.7"
log = "0.4"
mastodon-async = { version = "1.2", features = ["toml"] }
parking_lot = "0.12"
ratatui = { version = "0.20" }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
time = "0.3"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tracing",
] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1"
webbrowser = "0.8"
xdg = "2.4"

[dev-dependencies]
tempfile = "3"
indoc = "2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "aarch64-apple-darwin",
]
