[package]
name = "tooters"
version = "0.0.5"
edition = "2021"
license-file = "LICENSE.txt"
description = "A Rust TUI Mastodon App"
homepage = "https://toot.rs"
repository = "https://github.com/joshka/tooters"
readme = "README.md"
keywords = ["mastodon", "tui", "cli"]
categories = ["command-line-utilities"]

[dependencies]
axum = { version = "0.7.4", features = ["tokio"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
html2text = "0.12.4"
tui-input = "0.8.0"
mastodon-async = { version = "1.3.2", features = ["toml"] }
parking_lot = "0.12.1"
ratatui = { version = "0.26.1" }
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
time = "0.3.34"
tokio = { version = "1.36.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tracing",
] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-log = "0.2.0"
webbrowser = "0.8.13"
xdg = "2.5.2"
color-eyre = "0.6.2"

[dev-dependencies]
tempfile = "3.10.1"
indoc = "2.0.4"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "aarch64-apple-darwin",
]
