[package]
name = "tooters"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.txt"
description = "A Rust TUI Mastodon App"
repository = "https://github.com/joshka/tooters"
readme = "README.md"
keywords = ["mastodon", "tui", "cli"]
categories = ["command-line-utilities"]

[dependencies]
axum = { version = "0.8.1", features = ["tokio"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
html2text = "0.14.1"
mastodon-async = { version = "1.3.2", features = ["toml"] }
megalodon = "1.0.0"
ratatui = { version = "0.29.0" }
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
time = "0.3.37"
tokio = { version = "1.43.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tracing",
] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-log = "0.2.0"
tui-input = "0.11.1"
webbrowser = "1.0.3"
xdg = "2.5.2"
tokio-util = "0.7.13"

[dev-dependencies]
tempfile = "3.17.1"
indoc = "2.0.6"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "aarch64-apple-darwin",
]
